@@ -6,7 +6,7 @@ Release 1.1:
 - [done] Click on RevisionBar below a certain point lets JTextArea paint in
          a strange way.
 - [done] Show linenumbers bar in FilePanel.
--        Select a diff when searching. (linenumberselection?)
+- [done] Select a diff when searching. (linenumberselection?)
 - [done] Create nice website
 -        Create manual
 -        Create preferences/configuration tab 
